--- a/projects.html
+++ b/projects.html
@@ -5,53 +5,55 @@
     <meta charset="UTF-8">
     <title>projects | christine</title>
     <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="layout2.css">
   </head>
+
   <body>
     <nav>
-      <ul>
-        <li><a href="index.html">Back</a></li>
-      </ul>
+        <a href="index.html">Landing Page</a>
     </nav>
-    <article>
-      <header>
-        <h1>Projects</h1>
-      </header>
+    <div>
+        <header>
+          <h1>Projects</h1>
+        </header>
 
-      <section>
-        <p>
-          Hello! This contains a variety of projects I have worked on including coding and research projects.
-        </p>
-      </section>
+        <section>
+          <p>
+            Hello! This contains a variety of projects I have worked on including coding and research projects.
+          </p>
+        </section>
 
-      <header>
-        <h2>Suitcase Packer</h2>
-      </header>
-      <section>
-        <img src="pack.PNG" alt="">
-        <p>One of my first completed applications. Although it was the final project for my Data Structures class (Spring 2019), I am proud to have completed it.</p> 
-        <p>Suitcase Packer is an app that allows the user to input a destination and date of vacation in order to return a list of clothes to pack. The app will tell the user the temperature it’ll likely be when they travel. It will then tell the user generic clothing items and accessory items they should pack.</p>
-        <p>I created this project with Elaney Cheng and Eugenia Zhang as part of our Data Structure final. I worked on reading in the CSV and storing them into hashtables. I also coded the class that returns the average temperate based on date and airport.</p>
-        </p>
-        <p>
-          <a href="https://github.com/clam3/suitcase-packer">Link to Suitcase Packer</a>
-        </p>
-      </section>
+      <div class="projects">
+        <header>
+          <h2>Suitcase Packer</h2>
+        </header>
+        <section>
+          <img src="pack.PNG" alt="">
+          <p>One of my first completed applications. Although it was the final project for my Data Structures class (Spring 2019), I am proud to have completed it.</p> 
+          <p>Suitcase Packer is an app that allows the user to input a destination and date of vacation in order to return a list of clothes to pack. The app will tell the user the temperature it’ll likely be when they travel. It will then tell the user generic clothing items and accessory items they should pack.</p>
+          <p>I created this project with Elaney Cheng and Eugenia Zhang as part of our Data Structure final. I worked on reading in the CSV and storing them into hashtables. I also coded the class that returns the average temperate based on date and airport.</p>
+          </p>
+          <p>
+            <a href="https://github.com/clam3/suitcase-packer">Link to Suitcase Packer</a>
+          </p>
+        </section>
+      </div>
 
-      <header>
-        <h2>Colonialism in Minecraft</h2>
-      </header>
-      <section>
-        <img src="minecraft.png" alt="">
-        <p>An examanation of how colonialism manifests in Minecraft. Five ways in which Minecraft's mechanics uphold colonialist mentalites include: hostile monsters, villager NPC, inventory and acquistion, terrian generation and exploration, and the achievement system.</p>
-        <p>This poster was created during the Wellesley College 2019 Science Center Summer Research Program under the advisement of Professor Peter Mawhorter of the Computer Science Department. The paper associated with this project is currently under progress.</p>
-      </section>
+      <div class="projects">
+        <header>
+          <h2>Colonialism in Minecraft</h2>
+        </header>
+        <section>
+          <img src="minecraft.png" alt="">
+          <p>An examanation of how colonialism manifests in Minecraft. Five ways in which Minecraft's mechanics uphold colonialist mentalites include: hostile monsters, villager NPC, inventory and acquistion, terrian generation and exploration, and the achievement system.</p>
+          <p>This poster was created during the Wellesley College 2019 Science Center Summer Research Program under the advisement of Professor Peter Mawhorter of the Computer Science Department. The paper associated with this project is currently under progress.</p>
+        </section>
+      </div>
 
-    </article>
+    </div>
     <nav>
-      <ul>
-        <li><a href="index.html">Back</a></li>
-      </ul>
+        <a href="index.html">Landing Page</a>
+        <a href="#top">To The Top</a>
+        Created by Christine Lam :)
     </nav>
   </body>
 </html>
