--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</table>
 			
 			
-				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications</a> that bring the world together.</p>
+				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by <a href="projects.html">creating applications</a> that bring the world together.</p>
 
 				<p>I'm from Baltimore, Maryland (Go Orioles!). I am currently pursuing my undergraduate degree in computer science at Wellesley College, set to graduate Spring 2022.</p>
 
