colors and anchor tag changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		        <p> In my free time, I do performance martial arts (wushu) and play a variety of <a href="https://www.twitch.tv/kristyscorner" target="_blank">games</a>. Betrayal At House on the Hill is my favorite board game.</p>
 
-		        <p> I'm currently looking for Summer 2021 internship opportunities! <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume</a> </p>
+		        <p> I'm currently looking for Summer 2021 internship opportunities. <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume!</a> </p>
 
 			<ul>
 				<li><a href="https://github.com/clam3" target="_blank>"><i class="fa fa-github-square"></i></a></li>
