--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,9 @@
 
     </div>
     <nav>
-        <a href="index.html">Landing Page</a>
-        <a href="#top">To The Top</a>
-        Created by Christine Lam :)
+        <a href="index.html" class="bottom">Landing Page</a>
+        <a href="#top" class="bottom">To The Top</a>
+        <p>Created by Christine Lam :)</p>
     </nav>
   </body>
 </html>
