updated projects page

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,69 @@
 
       <div class="projects">
         <header>
+          <h2>WIN: Wushu Inventory Ninja</h2>
+        </header>
+        <section>
+          <img src="WIN.PNG" alt="">
+          <p>WIN is a weapons inventory tracker and lender application that gathers the most needed and useful functionalities for Wellesley Wushu in a centralized location. WIN has a database that would store the conditions, locations, and other related information of every weapon in Wellesley Wushu’s possession, and include features that would enhance the ease of checking in and checking out weapons and navigating Wushu’s weapons inventory.</p> 
+          <p>I created this project with Elaney Cheng, Raine Tenerelli, and Eugenia Zhang as part of our CS 304 Databases final project. I worked on image upload, ajax for weapon deletion, and creating the basic template for all the app.py routes.</p>
+          <p>Technologies used: Flask, Ajax, Python, MySQL, HTML, CSS, Javascript</p>
+          <p>Fall 2020</p>
+          </p>
+          <p>
+            <a href="https://github.com/rainetenerelli/WIN">Link to WIN</a>
+          </p>
+        </section>
+      </div>
+
+
+      <div class="projects">
+        <header>
+          <h2>CodePath: Simple Tweet</h2>
+        </header>
+        <section>
+          <img src="simpleTweet.gif" alt="">
+          <p>Simple Tweet is an android app that allows a user to view his Twitter timeline and post a new tweet. The app utilizes Twitter REST API.</p>
+          <p>Fall 2020</p>
+          <p>
+            <a href="https://github.com/clam3/SimpleTweet">Link to Simple Tweet</a>
+          </p>
+        </section>
+      </div>
+
+      <div class="projects">
+        <header>
+          <h2>CodePath: Flixster</h2>
+        </header>
+        <section>
+          <img src="flixster.gif" alt="">
+          <p>Flix is an app that allows users to browse movies from the The Movie Database API.</p>
+          <p>Fall 2020</p>
+          <p>
+            <a href="https://github.com/clam3/Flixster">Link to Flixster</a>
+          </p>
+        </section>
+      </div>
+
+      <div class="projects">
+        <header>
+          <h2>JPMC Internship: Android Application for a Non-Profit Organization</h2>
+        </header>
+        <section>
+          <img src="" alt="">
+          <p>Intern project for my summer 2020 internship software engineering internship at 
+          JPMC. I was on a team of 6 interns. We were tasked with creating a mobile application for a non-profit organization to retain outreach and engagement with their clients.</p> 
+          <p>The end product was a functional native app using ​Android Studio​, ​Java​, ​and ​XML ​with a ​geofencing API. There were 3 login routes for various types of users.</p>
+          <p>I worked on creating a virtual indentification page as well as creative ways to display information. I also bult the secondary login route. </p>
+          <p>Summer 2020</p>
+          <p>
+            <a href="">No Link Exists</a>
+          </p>
+        </section>
+      </div>
+
+      <div class="projects">
+        <header>
           <h2>Pill Safety</h2>
         </header>
         <section>
@@ -39,7 +102,7 @@
           <p>Pill Safety was built with the problem of perscription drug epidemic in America. Teenagers and young adults typically obtain prescription drugs from peers, friends, or family members, even resorting to stealing to get their fix. </p>
       	  <p>When "take a picture" is pressed on the interface, a request is sent from IBM's node-red to a Raspberry Pi. The Raspberry Pi takes a picture and sends it to Dropbox which then node-red retrieves. Classifiers are used on the image to determine if it matches the owner's face. If it does, a request is sent back to the pi to turn the servo motor in order to unlock the box which contains perscription medication. If the image is not the owner, then verification failed and the person will not gain access to the prescription drugs.</p>
           <p>I worked on training the visual recognition model and setting up node-red (javascript) to send/receive pictures from the Raspberry Pi through Dropbox.</p>
-          </p>
+          <p>Fall 2019</p>
           <p>
             <a href="https://devpost.com/software/pill-safety">Link to Pill Safety</a>
           </p>
@@ -56,6 +119,7 @@
           <p>Suitcase Packer is an app that allows the user to input a destination and date of vacation in order to return a list of clothes to pack. The app will tell the user the temperature it’ll likely be when they travel. It will then tell the user generic clothing items and accessory items they should pack.</p>
           <p>I created this project with Elaney Cheng and Eugenia Zhang as part of our Data Structure final. I worked on reading in the CSV and storing them into hashtables. I also coded the class that returns the average temperate based on date and airport.</p>
           </p>
+          <p>Spring 2019</p>
           <p>
             <a href="https://github.com/clam3/suitcase-packer">Link to Suitcase Packer</a>
           </p>
@@ -71,7 +135,7 @@
           <p>The starting idea was an app that gathers data from police databases and utilizes historical data to display a heatmap of criminal activity in Boston. This app will then recommend safer areas for foot traffic and provide actual navigation instructions, avoiding areas of highly concentrated violent crime and drug related activities. Although we only were able to implement the heatmap portion, I would like to resume this project one day when I have more technical abilities.</p> 
           <p>We scraped Boston Police arrest databases and gathered a dataset. Then, we utilized a deep neural network to create a model for geospatial crime frequency data, learning to predict the relative safety of a given area. The neutral network then evaluated the data on a variety of different locations in Boston and created a custom heatmap, which we then turned into a custom Google Maps overlay.</p>
           <p>This was my first CS project at my first ever hackathon, done during my first semester at college. I'd admit, I dind't really contribute much. I came up with the idea and helped with managing the team and manually cleaning up the data we collected.</p>
-          </p>
+          <p>Fall 2018</p>
           <p>
             <a href="https://devpost.com/software/safety-first-bueh2v">Link to Safety First</a>
           </p>
@@ -89,6 +153,7 @@
           <img src="minecraft.png" alt="">
           <p>An examanation of how colonialism manifests in Minecraft. Five ways in which Minecraft's mechanics uphold colonialist mentalites include: hostile monsters, villager NPC, inventory and acquistion, terrian generation and exploration, and the achievement system.</p>
           <p>This poster was created during the Wellesley College 2019 Science Center Summer Research Program under the advisement of Professor Peter Mawhorter of the Computer Science Department. The paper associated with this project is currently under progress.</p>
+          <p>Summer 2019</p>
         </section>
       </div>
 
